traces/bug_620.txt
examples++-load/mshmet.cpp:784: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/mshmet.cpp:784:1: initialization of callDoLoadInit
782.   //#define  WITH_NO_INIT
783.   //#include "msh3.hpp"
784. > LOADFUNC(Load_Init)

examples++-load/mshmet.cpp:784:1: call to DoLoadInit
782.   //#define  WITH_NO_INIT
783.   //#include "msh3.hpp"
784. > LOADFUNC(Load_Init)

examples++-load/mshmet.cpp:784:1: call to addInitFunct
  782.   //#define  WITH_NO_INIT
  783.   //#include "msh3.hpp"
  784. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
